fix overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   color: white;
   width: 100dvw;
